<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="now_playing_title">Now Playing</string>
    <string name="trending_title">Trending</string>
    <string name="popular_title">Popular</string>
    <string name="top_rated_title">Top Rated</string>
    <string name="upcoming_title">Upcoming</string>
    <string name="airing_today_title">Airing Today</string>
    <string name="on_the_air_title">On The Air</string>
    <string name="genres_title">Genres</string>
    <string name="see_all_title">See all</string>
    <string name="network_error_title">Connection Error</string>
    <string name="network_error_message">Unable to load data. Please check your internet connection and try again.</string>
    <string name="exit">Exit</string>
    <string name="retry">Retry</string>
    <string name="back">Back</string>
    <string name="loading">Loading…</string>
</resources>