<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/movies_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/now_playing_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            >
            <com.faltenreich.skeletonlayout.SkeletonLayout
                android:id="@+id/now_playing_title_skeleton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <TextView
                    android:id="@+id/now_playing_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/now_playing_title"
                    style="@style/TextAppearance.Material3.TitleLarge"
                    app:layout_constraintBaseline_toBaselineOf="@id/now_playing_see_all"
                    android:layout_gravity="center_vertical"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/now_playing_see_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all_title"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_gravity="right"/>
            </com.faltenreich.skeletonlayout.SkeletonLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/now_playing_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/now_playing_title_skeleton"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/trending_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            >
            <com.faltenreich.skeletonlayout.SkeletonLayout
                android:id="@+id/trending_title_skeleton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <TextView
                    android:id="@+id/trending_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trending_title"
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_gravity="center_vertical"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/trending_see_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all_title"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_gravity="right"/>
            </com.faltenreich.skeletonlayout.SkeletonLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trending_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trending_title_skeleton"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/popular_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            >
            <com.faltenreich.skeletonlayout.SkeletonLayout
                android:id="@+id/popular_title_skeleton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <TextView
                    android:id="@+id/popular_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular_title"
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_gravity="center_vertical"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/popular_see_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all_title"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_gravity="right"/>
            </com.faltenreich.skeletonlayout.SkeletonLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popular_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/popular_title_skeleton"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_rated_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            >
            <com.faltenreich.skeletonlayout.SkeletonLayout
                android:id="@+id/top_rated_title_skeleton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <TextView
                    android:id="@+id/top_rated_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_rated_title"
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_gravity="center_vertical"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/top_rated_see_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all_title"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_gravity="right"/>
            </com.faltenreich.skeletonlayout.SkeletonLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/top_rated_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_rated_title_skeleton"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/upcoming_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            >
            <com.faltenreich.skeletonlayout.SkeletonLayout
                android:id="@+id/upcoming_title_skeleton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <TextView
                    android:id="@+id/upcoming_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upcoming_title"
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_gravity="center_vertical"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/upcoming_see_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all_title"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_gravity="right"/>
            </com.faltenreich.skeletonlayout.SkeletonLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/upcoming_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upcoming_title_skeleton"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/genre_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            >
            <com.faltenreich.skeletonlayout.SkeletonLayout
                android:id="@+id/genre_title_skeleton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <TextView
                    android:id="@+id/genre_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genres_title"
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_gravity="center_vertical"/>
            </com.faltenreich.skeletonlayout.SkeletonLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/genre_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genre_title_skeleton"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>